--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,9 @@ tqdm>=4.65.0
 pyarrow>=13.0.0
 psutil>=5.9.0
 tensorboard>=2.19.0
-packaging>=23.2 
+packaging>=23.2
+
+# Testing
+pytest>=7.4.0
+pytest-cov>=4.1.0
+pytest-xdist>=3.3.1 
